Fix: Align text-decoration-color with font color

--- a/packages/visualizations/app/styles/navi-visualizations/visualizations/table.less
+++ b/packages/visualizations/app/styles/navi-visualizations/visualizations/table.less
@@ -94,7 +94,6 @@
       &--custom-name {
         text-decoration: underline;
         text-decoration-style: dotted;
-        text-decoration-color: #aaaaaa;
       }
     }
 
